--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,20 @@
       {
         "nested-interactive": "off"
       }
-    ]
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off",
+        "label": "off"
+      }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
+    ],
+    "disown-opener": "off"
   }
 }
